# csc299-project

./: .gitignore  LLM Project Ideas for Vibe Coding.md  SUMMARY.md  main.py  task_cli.py  youtube.txt
cta pkms tool (speckit version, not functional)/: main.py  pyproject.toml
cta pkms tool (speckit version, not functional)/.specify/memory/: constitution.md
cta pkms tool (speckit version, not functional)/data/: cta_lines.json  cta_stations.json
cta pkms tool (speckit version, not functional)/specs/001-cta-command-center/: spec.md
cta-pkms/: README.md  pyproject.toml
cta-pkms/cta-gtfs/: agency.json  calendar.jsonl  calendar_dates.jsonl  json_converter.py  route-stations.jsonl  routes.jsonl  stop_times.jsonl  stops.jsonl  transfers.jsonl  trips.jsonl
cta-pkms/cta-gtfs/tools-for-data/: enrich_placeholder.py  filter_stop_times.py  json_converter.py  parent_station_lookup.py
cta-pkms/src/cta_pkms/: __init__.py  commutes.json
cta-pkms/tests/: test_cta_pkms.py
tasks1/: README.md  task_cli.py
tasks2/: README.md
tasks3/: pyproject.toml
tasks3/tests/: test_list_tasks.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: main.py  pyproject.toml
tasks5/.specify/memory/: constitution.md
tasks5/specs/001-task-cli-storage/: spec.md
