[project]
name = "cta-pkms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eren Aliev", email = "erengotsauce@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
cta-pkms = "cta_pkms:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
