[project]
name = "tasks3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eren Aliev", email = "erengotsauce@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tasks3 = "tasks3:main"
task_cli = "tasks3.task_cli:list_tasks"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
